--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "cheerio": "^0.17.0",
     "gulp-util": "^3.0.1",
+    "mkdirp": "latest",
     "mustache": "^0.8.2",
     "through2": "^0.6.3"
   }
